<resources>
    <string name="app_name">Giftlist</string>

    <string name="action_settings">Settings</string>

    <string name="dialog_action_ok">OK</string>
    <string name="dialog_action_cancel">Cancel</string>
    <string name="dialog_error_title">Sorry</string>

    <string name="keyword_hint">Enter keywords separed by a comma</string>
    <string name="wl_occasion_hint">Why are you buying presents?</string>

    <string name="etsy_prompt">Choose a category</string>
    <string name="checkbox_ebay">Ebay</string>
    <string name="checkbox_etsy">Etsy</string>
    <string name="product_added">Product added</string>
    <string name="product_added_error">Error adding product</string>
    <string name="wishlist_added">Wishlist added</string>
    <string name="action_add_product">Add Product</string>
    <string name="action_search_wishlist">Search Wishlist</string>
    <string name="ages_prompt">Select age</string>
    <string name="checkbox_sports">Sports</string>
    <string name="checkbox_games">Videogames</string>
    <string name="checkbox_art">Art</string>
    <string name="checkbox_technology">Technology</string>
    <string name="checkbox_travelling">Travelling</string>
    <string name="checkbox_handcraft">Handcraft</string>
    <string name="checkbox_books">Books</string>
    <string name="checkbox_nerd">Geekery</string>
    <string name="checkbox_music">Music</string>
    <string name="reload">Reload</string>
    <string name="try_reloading">Try reloading</string>
    <string name="back_to_wl">See your products</string>
    <string name="go_buy_it">Get Product</string>
    <string name="your_wishlists">Your Wishlists</string>

    <string name="birthday">Birthday</string>
    <string name="anniversary">Anniversary</string>
    <string name="graduation">Graduation</string>
    <string name="christmas">Christmas</string>
    <string name="wedding">Wedding</string>
    <string name="christening">Christening</string>
    <string name="thankyou">Thank You</string>
    <string name="engagement">Engagement</string>
    <string name="other">Other</string>
    <string name="snack_bar_action_undo">Undo</string>
    <string name="select_a_price_range">Select a price range</string>
    <string name="for_your_gifts">for your gifts</string>
    <string name="tell_us_something_about_your_gift_recipient">Tell us something about your gift recipient</string>
    <string name="so_that_we_can_improve_our_suggestions">So that we can improve our suggestions</string>
    <string name="how_old_is_he_or_she">How old is he or she?</string>
    <string name="what_does_he_or_she_likes">What does he or she likes?</string>
    <string name="some_final_details">Some final details</string>
    <string name="ready_to_go">and we are ready to go</string>
    <string name="snack_bar_action_dismiss">dismiss</string>
    <string name="pick_source_error">Pick at least one source</string>
    <string name="action_welcome_wizard">Welcome Wizard</string>
    <string name="swipe_it_on_products">Swipe it on products!</string>

    <string-array name="ages">
        <item>baby</item>
        <item>kid</item>
        <item>young</item>
        <item>adult</item>
    </string-array>
    <string-array name="etsy_categories">
        <item>accessories</item>
        <item>art</item>
        <item>bags_and_purses</item>
        <item>bath_and_beauty</item>
        <item>books_and_zines</item>
        <item>candles</item>
        <item>ceramics_and_pottery</item>
        <item>children</item>
        <item>clothing</item>
        <item>crochet</item>
        <item>dolls_and_miniatures</item>
        <item>everything_else</item>
        <item>furniture</item>
        <item>geekery</item>
        <item>glass</item>
        <item>holidays</item>
        <item>housewares</item>
        <item>jewelry</item>
        <item>knitting</item>
        <item>music</item>
        <item>needlecraft</item>
        <item>paper_goods</item>
        <item>patterns</item>
        <item>pets</item>
        <item>plants_and_edibles</item>
        <item>quilts</item>
        <item>supplies</item>
        <item>toys</item>
        <item>vintage</item>
        <item>weddings</item>
        <item>woodworking</item>
    </string-array>
    <string-array name="ebay_categories">
        <item>Antiques</item>
        <item>Art</item>
        <item>Baby</item>
        <item>Books</item>
        <item>Business e Industrial</item>
        <item>Cameras e Photo</item>
        <item>Cell Phones e Accessories</item>
        <item>Clothing, Shoes e Accessories</item>
        <item>Coins e Paper Money</item>
        <item>Collectibles</item>
        <item>Computers/Tablets e Networking</item>
        <item>Consumer Electronics</item>
        <item>Crafts</item>
        <item>Dolls e Bears</item>
        <item>DVDs e Movies</item>
        <item>Entertainment Memorabilia</item>
        <item>Gift Cards e Coupons</item>
        <item>Health e Beauty</item>
        <item>Home e Garden</item>
        <item>Jewelry e Watches</item>
        <item>Music</item>
        <item>Musical Instruments e Gear</item>
        <item>Pet Supplies</item>
        <item>Pottery e Glass</item>
        <item>Real Estate</item>
        <item>Specialty Services</item>
        <item>Sporting Goods</item>
        <item>Sports Mem, Cards e Fan Shop</item>
        <item>Stamps</item>
        <item>Tickets e Experiences</item>
        <item>Toys e Hobbies</item>
        <item>Travel</item>
        <item>Video Games e Consoles</item>
        <item>Everything Else</item>
    </string-array>
    <string-array name="occasions">
        <item>@string/birthday</item>
        <item>@string/anniversary</item>
        <item>@string/graduation</item>
        <item>@string/christmas</item>
        <item>@string/wedding</item>
        <item>@string/christening</item>
        <item>@string/thankyou</item>
        <item>@string/engagement</item>
        <item>@string/other</item>
    </string-array>
</resources>
