<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <!--Spinner
        android:id="@+id/spinner_category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:drawable/btn_dropdown"
        android:entries="@array/etsy_categories"
        android:prompt="@string/etsy_prompt"
        android:spinnerMode="dropdown" /-->

    <EditText
        android:id="@+id/text_maxprice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/price_hint"/>

    <EditText
        android:id="@+id/text_minprice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/price_hint"/>


    <Spinner
        android:id="@+id/select_age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:drawable/btn_dropdown"
        android:entries="@array/ages"
        android:prompt="@string/ages_prompt"
        android:visibility="gone"
        android:spinnerMode="dropdown"/>

    <EditText
        android:id="@+id/text_keywords"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:hint="@string/keyword_hint"/>

    <Button
        android:id="@+id/button_more_options"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="More"/>


    <LinearLayout
        android:id="@+id/category_checkboxes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Does he like these things?"/>

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="visible"
            android:rowCount="3"
            android:columnCount="3"
            android:orientation="vertical"
            android:layout_gravity="bottom">

            <CheckBox
                android:id="@+id/checkbox_handcraft"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/checkbox_handcraft"/>

            <CheckBox
                android:id="@+id/checkbox_sports"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/checkbox_sports"/>

            <CheckBox
                android:id="@+id/checkbox_games"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/checkbox_games"/>

            <CheckBox
                android:id="@+id/checkbox_art"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/checkbox_art"/>

            <CheckBox
                android:id="@+id/checkbox_technology"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/checkbox_technology"/>

            <CheckBox
                android:id="@+id/checkbox_travelling"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/checkbox_travelling"/>

            <CheckBox
                android:id="@+id/checkbox_books"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/checkbox_books"/>

            <CheckBox
                android:id="@+id/checkbox_nerd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/checkbox_nerd"/>

            <CheckBox
                android:id="@+id/checkbox_music"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/checkbox_music"/>
        </GridLayout>
    </LinearLayout>


    <Button
        android:id="@+id/button_start_product_activity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:text="Start looking for products"/>

    <!--CheckBox
        android:id="@+id/checkbox_ebay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/checkbox_ebay"/>

    <CheckBox
        android:id="@+id/checkbox_etsy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/checkbox_etsy"/-->

</LinearLayout>