<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <EditText
        android:id="@+id/text_keywords"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:hint="@string/keyword_hint"/>

    <CheckBox
        android:id="@+id/checkbox_ebay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/checkbox_ebay"/>

    <CheckBox
        android:id="@+id/checkbox_etsy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/checkbox_etsy"/>

</LinearLayout>